Plenty of tweaks such that translated pages match the same structure as the original page so we can extract original translations with po4a

--- a/docs/admin/05.get_started/20.install_on/_configuration.mdx
+++ b/docs/admin/05.get_started/20.install_on/_configuration.mdx
@@ -90,9 +90,11 @@ Especially, installations on WSL or virtual machines will likely not be reachabl
 
 <Tabs groupId="admin-commands">
   <TabItem value="web" label="(Recommended) From the web interface">
+
     To run a diagnosis, go on Web Admin in the Diagnosis section. Click Run initial diagnosis and you should get a screen like this:
 
     <Figure caption="Preview of the diagnostic panel" src="/img/webadmin/diagnostic.png"/>
+
   </TabItem>
   <TabItem value="cli" label="From the command line">
 ```bash
@@ -111,11 +113,14 @@ For more detailed instructions, or to lean more about SSL/TLS certificates, see 
 
 <Tabs groupId="admin-commands">
   <TabItem value="web" label="From the web interface">
-    Go in Domains > Click on your domain > SSL Certificate
+
+    Go in Domains > Click on your domain > Certificate
 
     <Figure caption="Preview of the diagnostic panel" src="/img/webadmin/certificate-before-LE.png"/>
+
   </TabItem>
   <TabItem value="cli" label="From the command line">
+
 ```bash
 yunohost domain cert install
 ```
