--- a/docs/admin/05.get_started/40.post_install/15.port_forwarding.mdx
+++ b/docs/admin/05.get_started/40.post_install/15.port_forwarding.mdx
@@ -18,11 +18,7 @@ Your box/router admin interface is usually reachable via [http://192.168.0.1](ht
 
 ### 2. Find the local IP of your server
 
-Identify the *local* IP of your server, either:
-
-- from your box/router interface, which might list devices connected
-- from the YunoHost webadmin, in 'Diagnosis', section 'Internet connectivity', click on 'Details' on the IPv4 report.
-- from the command line in your server, by running `hostname -I`
+Identify the *local* IP of your server using one of the method listed [on the corresponding page](/admin/get_started/post_install/find_ip).
 
 A local IP address typically looks like `192.168.xx.yy`, or `10.0.xx.yy`.
 
