--- a/docs/admin/45.tutorials/40.torhiddenservice.mdx
+++ b/docs/admin/45.tutorials/40.torhiddenservice.mdx
@@ -52,6 +52,12 @@ If you want to avoid being redirected to the SSO portal at login, you can deacti
 #access_by_lua_file /usr/share/ssowat/access.lua;
 ```
 
+### Check for errors in NGINX configuration
+
+```bash
+nginx -t
+```
+
 ### Restart NGINX
 
 ```bash
