--- a/i18n/de/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
@@ -4,28 +4,28 @@ title: Choose your self-hosting mode
 
 Sie können zu Hause (auf einem kleinen Computer) oder auf einem Remote-Server hosten. Jede Lösung hat ihre Vor- und Nachteile:
 
-### Zu Hause, zum Beispiel auf einem Einplatinencomputer oder einem alten Computer
+## Zu Hause, zum Beispiel auf einem Einplatinencomputer oder einem alten Computer
 
 Sie können zu Hause mit einem Einplatinencomputer oder einem überarbeiteten regulären Computer, der mit Ihrem Heimrouter verbunden ist, hosten.
 
 - **Pros**  : Sie haben die physische Kontrolle über die Maschine und müssen nur die Hardware kaufen;
 - **Cons**  : Sie müssen [Ihre Internet-Router manuell konfigurieren](/admin/get_started/post_install/port_forwarding) und [sind möglicherweise von Ihrem Internet-Service-Provider eingeschränkt](/admin/get_started/providers/isp/).
 
-### Zu Hause hinter einem VPN
+## Zu Hause hinter einem VPN
 
 Ein VPN ist ein verschlüsselter Tunnel zwischen zwei Computern. In der Praxis sieht es so aus, als ob Sie direkt vor Ort mit Ihrem Server verbunden wären, aber tatsächlich verbinden Sie sich von einem anderen Ort im Internet. Auf diese Weise können Sie weiterhin zu Hause hosten und gleichzeitig mögliche Einschränkungen Ihres Internetdienstanbieters umgehen. Siehe auch [das Internet Cube-Projekt](https://internetcu.be/) und [der FFDN](https://www.ffdn.org/).
 
 - **Pros** : Sie haben die physische Kontrolle über den Computer, und das VPN verbirgt Ihren Datenverkehr vor Ihrem ISP und ermöglicht es Ihnen, seine Einschränkungen zu umgehen;
 - **Cons** : Sie müssen ein monatliches Abonnement für das VPN bezahlen.
 
-### Auf einem Remote-Server (VPS oder dedizierter Server)
+## Auf einem Remote-Server (VPS oder dedizierter Server)
 
 Sie können einen virtuellen privaten Server oder eine dedizierte Maschine von [associative](https://db.ffdn.org/) oder von anderen [kommerziellen](/admin/get_started/providers/servers) "Cloud"-Anbietern mieten.
 
 - **Pros** : Ihr Server und seine Internetverbindung sind schnell;
 - **Cons** : Sie müssen ein monatliches Abonnement bezahlen und haben keine physische Kontrolle über Ihren Server.
 
-### Summary
+## Summary
 
 export const styleNone = {
   textAlign: 'center',
