--- a/i18n/de/docusaurus-plugin-content-docs/current/admin/35.email/05.clients.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/admin/35.email/05.clients.mdx
@@ -23,9 +23,15 @@ Hier sind die Elemente, die Sie eingeben sollten, um Ihren Mail-Client manuell z
 <Tabs>
 <TabItem value="thunderbird" label="Mozilla Thunderbird">
 
-#### <SmallInline url='/img/icons/logo-thunderbird.png'/> Thunderbird Desktop konfigurieren (auf einem Desktop-Computer)
+##### <SmallInline url='/img/icons/logo-thunderbird.png'/> Thunderbird Desktop konfigurieren (auf einem Desktop-Computer)
 
-Um ein neues Konto in Thunderbird Desktop manuell zu konfigurieren, fügen Sie die Kontoinformationen hinzu und wählen dann Port 993 mit SSL/TLS für IMAP und Port 587 mit STARTTLS für SMTP. Wählen Sie anschließend "Normales Passwort" für die Authentifizierung und klicken Sie auf "Erweiterte Konfiguration". Möglicherweise müssen Sie die Zertifikatsausnahmen für das Abrufen von E-Mails und nach dem Senden Ihrer ersten E-Mail akzeptieren. Vergessen Sie nicht, den Punkt vor dem Domainnamen zu entfernen.
+Um ein neues Konto in Thunderbird Desktop manuell zu konfigurieren, fügen Sie die Kontoinformationen hinzu und wählen:
+
+- dann Port 993 mit SSL/TLS für IMAP
+- Port 587 mit STARTTLS für SMTP. 
+- Wählen Sie anschließend "Normales Passwort" für die Authentifizierung und klicken Sie auf "Erweiterte Konfiguration".
+
+Möglicherweise müssen Sie die Zertifikatsausnahmen für das Abrufen von E-Mails und nach dem Senden Ihrer ersten E-Mail akzeptieren. Vergessen Sie nicht, den Punkt vor dem Domainnamen zu entfernen.
 
 ![](/img/softwares/thunderbird_config_1.png)
 ![](/img/softwares/thunderbird_config_2.png)
@@ -35,7 +41,7 @@ Um ein neues Konto in Thunderbird Desktop manuell zu konfigurieren, fügen Sie d
 </TabItem>
 <TabItem value="k9" label="K-9 Mail (Thunderbird Mobile)">
 
-#### <SmallInline url='/img/icons/logo-k9.png'/> K-9 Mail / Thunderbird Mobile konfigurieren (auf Android)
+##### <SmallInline url='/img/icons/logo-k9.png'/> K-9 Mail / Thunderbird Mobile konfigurieren (auf Android)
 
 Führen Sie die folgenden Schritte aus. (Wie bei Thunderbird Desktop müssen Sie möglicherweise an einigen Stellen Zertifikate akzeptieren)
 
@@ -53,7 +59,7 @@ Führen Sie die folgenden Schritte aus. (Wie bei Thunderbird Desktop müssen Sie
 </TabItem>
 <TabItem value="dekko" label="Dekko">
 
-#### <SmallInline url='/img/icons/logo-dekko.png'/> Dekko konfigurieren (auf Ubuntu Touch)
+##### <SmallInline url='/img/icons/logo-dekko.png'/> Dekko konfigurieren (auf Ubuntu Touch)
 
 Beim ersten Mal können Sie einfach "Konto hinzufügen" wählen. Wenn Sie bereits ein Konto eingerichtet haben, tippen Sie auf das Hamburger-Menü, dann auf das Zahnrad, wählen Sie Mail, Konten und drücken Sie das '+'-Symbol.
 
