--- a/i18n/es/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
@@ -4,28 +4,28 @@ title: Choose your self-hosting mode
 
 Puedes autohospedarte desde tu casa (desde un pequeño ordenador), o desde un servidor remoto. Cada solución tiene sus ventajas e inconvenientes:
 
-### En casa, por ejemplo con una tarjeta ARM o un ordenador antiguo
+## En casa, por ejemplo con una tarjeta ARM o un ordenador antiguo
 
 Puedes autoalojarte en casa, desde una tarjeta ARM o un viejo ordenador conectado a tu internet.
 
 - **Ventajas**: Tienes el control físico de la máquina y solo tienes que conseguir el hardware inicial.
 - **Desventajas**: Probablemente necesitas [configurer manualmente tu router](/admin/get_started/post_install/port_forwarding) y puede que [tu operador de internet te limite](/admin/get_started/providers/isp/).
 
-### En casa, pasando por una VPN
+## En casa, pasando por una VPN
 
 Una VPN es un tunel encriptado entre dos máquinas. En la práctica, permite hacer como si una máquina estuviera en otro lugar. Esto permite el autoalojamiento evitando limitaciones de los proveedores de internet. Puedes echar un ojo a [el proyecto InternetCu.Be](https://internetcu.be/) y la [Federación FFDN (Federación de operadores de acceso a internet asociativos)](https://www.ffdn.org/en).
 
 - **Ventajas** : Tienes el control físico de la máquina y la VPN permite ocultarte del rastro de tu operador de internet, y esquivar limitaciones.
 - **Desventajas** : Las VPN suelen ser de pago, y tendrás que costearla mensualmente.
 
-### En un servidor remoto (VPS o servidor dedicado)
+## En un servidor remoto (VPS o servidor dedicado)
 
 Puedes alquilar un servidor privado virtual (VPS) o una máquina dedicada a alojamientos [asociativos](https://db.ffdn.org/) o [comerciales](/admin/get_started/providers/servers).
 
 - **Ventajas**: Tu servidor será rápido y su conexión veloz.
 - **Desventajas**: Ocasiona un gasto mensual por la máquina, y no tienes control físico.
 
-### Resumen
+## Resumen
 
 export const styleNone = {
   textAlign: 'center',
