--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/10.providers/15.vpn/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/10.providers/15.vpn/index.mdx
@@ -7,6 +7,10 @@ import {HighlightFFDN, HighlightNonProfit} from '@site/src/components/Highlight'
 
 Étant donné que la mise en place d'un serveur à domicile est une pratique peu courante, la plupart des connexions internet fournies aux particuliers ne sont pas adaptées à cette fin, en particulier si vous souhaitez envoyer des courriels. Un VPN neutre fournissant une adresse IPv4 publique fixe dédiée et des adresses IPv6 [peut aider à contourner certaines limitations ou difficultés](/admin/get_started/providers/vpn/vpn_advantage).
 
+! Note that except if you have a <a href="https://en.wikipedia.org/wiki/Threat_model">threat model</a> that implies to really be "hidden", you do not need to hide your home IP address using a VPN. It is really not a huge deal to expose your IP address, do not trust the big commercial VPN companies who tries to sell you a product by inducing fear.
+! If you *do* have such a threat model, especially against state threats, most of the providers listed below will **not** be of any help to you, since they will have to comply with police and judicial demands.
+! However, a VPN can help you to bypass port-forwarding limitations, or to get a stable IP address (if you ISP only provide dynamic IP) and this page will help you for that!
+
 Ci-dessous, vous trouverez une liste de fournisseurs compatibles avec l'auto-hébergement et en particulier ceux qui fournissent le format .cube pour les applications VPNClient et ceux qui fournissent [internetcube](https://internetcu.be).
 
 :::info
