--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/25.domains/certificate.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/25.domains/certificate.mdx
@@ -82,7 +82,7 @@ trois mois environ.
 </TabItem>
 </Tabs>
 
-##### En cas de problème
+#### En cas de problème
 
 Si, suite à une mauvaise manipulation, un certificat se retrouve dans une
 situation fâcheuse (e.g. perte du certificat ou impossible de lire le
