--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/30.apps/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/30.apps/index.mdx
@@ -16,7 +16,9 @@ Les applications peuvent être installées et gérées au travers de l'interface
 Le catalogue des applications et leurs catégories peut être parcouru depuis l'interface web d'administration en cliquant sur le bouton <HighlightAppInstall/> dans la liste des applications, ou depuis cette documentation.
 
 <div class="text--center">
-<Button url="https://apps.yunohost.org" color="orange"><FAIcon icon='fa-cubes'/> Catalogue d'applications </Button>
+    <Button url="https://apps.yunohost.org" color="orange">
+        <FAIcon icon='fa-cubes'/> Catalogue d'applications
+    </Button>
 </div>
 
 :::caution
