--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/35.email/05.clients.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/35.email/05.clients.mdx
@@ -24,7 +24,7 @@ Voici les éléments que vous devrez entrer pour configurer manuellement votre c
 <Tabs>
 <TabItem value="thunderbird" label="Mozilla Thunderbird">
 
-#### <SmallInline url='/img/icons/logo-thunderbird.png'/> Configurer Thunderbird Desktop
+##### <SmallInline url='/img/icons/logo-thunderbird.png'/> Configurer Thunderbird Desktop
 
 To manually configure a new account in Thunderbird Desktop, add the account information, then click on 'Configure manually'.
 
@@ -42,7 +42,7 @@ You may need to accept the certificate exceptions for fetching mails and after y
 </TabItem>
 <TabItem value="k9" label="K-9 Mail (Thunderbird Mobile)">
 
-#### <SmallInline url='/img/icons/logo-k9.png'/> Configurer K-9 Mail / Thunderbird Mobile (sur Android)
+##### <SmallInline url='/img/icons/logo-k9.png'/> Configurer K-9 Mail / Thunderbird Mobile (sur Android)
 
 Suivez les instructions suivantes (comme pour Thunderbird Desktop, il vous faudra peut-être accepter des certificats à un moment).
 
@@ -59,7 +59,7 @@ Suivez les instructions suivantes (comme pour Thunderbird Desktop, il vous faudr
 </TabItem>
 <TabItem value="dekko" label="Dekko">
 
-#### <SmallInline url='/img/icons/logo-dekko.png'/> Configurer Dekko (sur Ubuntu Touch)
+##### <SmallInline url='/img/icons/logo-dekko.png'/> Configurer Dekko (sur Ubuntu Touch)
 
 La première fois, vous pouvez simplement choisir « Ajouter un compte ». Si vous avez déjà un compte configuré, appuyez sur le menu hamburger puis sur le rouage, choisissez Courrier, Comptes et appuyez sur le symbole '+'.
 
