--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/45.tutorials/65.sftp_on_apps.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/45.tutorials/65.sftp_on_apps.mdx
@@ -5,11 +5,17 @@ title: Donner la permission SFTP d'éditer une application
 
 Dans YunoHost, depuis la gestion des permissions par l'interface d'administration web, vous pouvez spécifier quel utilisateur peut accéder à votre système à travers SFTP.
 
+Go to : 
+- Groups and permissions > Individual user permissions. 
+- Click on add a permission and select SFTP
+
 Cependant ces utilisateurs sont chrootés dans leur répertoire home pour des raisons de sécurité.
 
 Si vous désirez donner accès à une application spécifique à travers SFTP, voici les actions à faire après avoir donné les droits à l'utilisateur dans l'interface d'adminstration web.
 
-Dans les instructions suivantes USER est l'utilisateur à qui sont données les permissions d'éditer des fichiers wordpress.
+Dans les instructions suivantes:
+- USER est l'utilisateur à qui sont données les permissions d'éditer des fichiers wordpress.
+- `/var/www/wordpress/wp-config.php` est à remplacer par le chemin du fichier de config de l'app. Par exemple, pour YesWiki (`/var/www/yeswiki/wakka.config.php`)
 
 ```bash
 mkdir -p /home/USER/apps/wordpress
@@ -25,3 +31,8 @@ setfacl -m u:wordpress:r-- /var/www/wordpress/wp-config.php
 setfacl -R -m u:USER:rwX /var/www/wordpress
 setfacl -R -d -m u:USER:rwX /var/www/wordpress
 ```
+Quick commands explanation :
+- `mkdir -p /PATH` creates a folder in the specified PATH
+- `touch` creates an empty file
+- `mount --bind` makes the contents of the source file or directory available at the target location without actually moving or copying the data.
+- `setfacl` set the file permissions
