--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/50.troubleshooting/25.blacklist_forms.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/50.troubleshooting/25.blacklist_forms.mdx
@@ -4,7 +4,7 @@ title: Formulaires de retrait de liste noire
 
 Il peut arriver que votre serveur (son adresse IP) soit ajouté à la liste noire de certains fournisseurs d’adresse de courrier électronique ou de services anti-spam. Les courriels envoyés à ces adresses sont alors filtrés et n’arrivent pas à destination.
 
-#### Testez votre serveur
+## Testez votre serveur
 
 To check your Email deliverability, YunoHost provide some tests avilables in the Diagnosis tool. This tools evalutes  a lot of configuration and ip reputation points. It gives you also an indicator if some mails are blocked inside the mail queue (waiting to be sent).
 all the points evaluated by [the well known mail-tester.com](https://www.mail-tester.com) except for mail content (usefull if you prepare a newsletter).
