--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
@@ -4,28 +4,28 @@ title: Choose your self-hosting mode
 
 Puoi fare self-hosting in casa (su un piccolo computer), o su un server remoto. Ogni soluzione ha i suoi pro e i suoi contro:
 
-### In casa, per esempio con una scheda ARM o con un vecchio computer
+## In casa, per esempio con una scheda ARM o con un vecchio computer
 
 Puoi fare self-hosting in proprio, con una scheda ARM o con un vecchio computer, connesso con il tuo router.
 
 - **Pro**: avrai un controllo fisico sulla macchina e avrai bisogno solo di acquistare il materiale per iniziare;
 - **Contro**: dovrai [configurare manualmente il router](/admin/get_started/post_install/port_forwarding) e probabilmente ci saranno dei [limiti rispetto al tuo fornitore di accesso a internet](/admin/get_started/providers/isp/)
 
-### In casa, dietro una VPN
+## In casa, dietro una VPN
 
 Una VPN è un tunnel criptato tra due macchine. In pratica permette di avere una macchina «come se» fosse connessa ad un'altra. Questa soluzione permette di fare self-hosting a casa aggirando i limiti del fornitore di accesso a internet. Vedi anche il [progetto Brique Internet](https://labriqueinter.net) e [FFDN](https://www.ffdn.org).
 
 - **Pro**: avrai un controllo fisico sulla macchina e la VPN ti permetterà di nascondere il traffico al tuo ISP e ti permetterà di bypassare le sue limitazioni.
 - **Contro**: dovrai pagare un canone mensile per la VPN.
 
-### Su un server distante (VPS o server dedicato)
+## Su un server distante (VPS o server dedicato)
 
 Puoi affittare un server virtuale privato o un macchina dedicata da fornitori "Cloud" come [associazioni](https://db.ffdn.org) o [commerciali](/admin/get_started/providers/servers)
 
 - **Pro**: il tuo server e la connessione saranno veloci;
 - **Contro**: dovrai pagare un canone mensile per la macchina e non avrai il controllo fisico del tuo server.
 
-### Sommario
+## Sommario
 
 export const styleNone = {
   textAlign: 'center',
