--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/05.get_started/10.providers/05.registrar/ovh/autodns.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/05.get_started/10.providers/05.registrar/ovh/autodns.mdx
@@ -5,7 +5,7 @@ title: Ottenere una chiave API da OVH
 
 Questa parte ha lo scopo di guidarvi nella procedura necessaria all'ottenimento di una chiave API di OVH, necessaria per impostare la procedura di configurazione automatica dei DNS di YunoHost.
 
-:::info
+:::caution
 **Non divulgate MAI i vostri token API !** Un attaccante maligno con i vostri token potrebbe prendere il controllo del vostro dominio ed anche eventualmente del vostro server!
 :::
 
