--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/25.domains/certificate.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/25.domains/certificate.mdx
@@ -74,7 +74,7 @@ Una volta installato il certificato potete verificarne il corretto funzionamento
 </TabItem>
 </Tabs>
 
-### Problemi e soluzioni
+#### Problemi e soluzioni
 
 Se il vostro certificato risultasse non funzionante a causa di qualche errore (ad esempio lo avete perso oppure non siete in grado di leggere i file) potete ripulire la situazione rigenerando un certificato autofirmato con questo comando:
 
