--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/45.tutorials/25.external_storage.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/45.tutorials/25.external_storage.mdx
@@ -256,6 +256,6 @@ rm -Rf /home/yunohost.app.bkp
 rm -Rf /var/mail.bkp
 ```
 
-### 🎉 Complimenti!!!
+## 🎉 Complimenti!!!
 
 Se siete giunti fino qui senza incidenti, avete configurato un server che sfrutta uno o più dischi per il salvataggio dei dati.
