--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/45.tutorials/40.torhiddenservice.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/45.tutorials/40.torhiddenservice.mdx
@@ -51,6 +51,12 @@ Se non vuoi essere rediretto al portale SSO al login puoi disattivare SSOwat spe
 #access_by_lua_file /usr/share/ssowat/access.lua;
 ```
 
+### Check for errors in NGINX configuration
+
+```bash
+nginx -t
+```
+
 ### Riavvia NGINX
 
 ```bash
