--- a/i18n/ru/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
@@ -4,28 +4,28 @@ title: Choose your self-hosting mode
 
 Вы можете разместить его у себя дома (на небольшом компьютере) или на удаленном сервере. У каждого решения есть свои плюсы и минусы:
 
-### Дома, например, на плате ARM или старом компьютере
+## Дома, например, на плате ARM или старом компьютере
 
 Вы можете запустить YunoHost у себя дома с помощью платы ARM или переоборудованного обычного компьютера, подключенного к вашему домашнему роутеру.
 
 - **Плюсы** : у вас будет физический контроль над машиной, и вам нужно будет только купить оборудование;
 - **Минусы** : вам придется [вручную настроить свой роутер](/admin/get_started/post_install/port_forwarding) и [возможные ограничения вашим провайдером](/admin/get_started/providers/isp/).
 
-### Дома, используя VPN
+## Дома, используя VPN
 
 VPN - это зашифрованный туннель между двумя компьютерами. На практике это делает все "как если бы" вы были напрямую, локально, подключены к своему серверному компьютеру, но на самом деле откуда-то еще в Интернете. Это позволяет вам по-прежнему разместить сервер у себя дома, обходя возможные ограничения вашего интернет-провайдера. Смотрите также [проект Internet Cube](https://internetcu.be/) и [FFDN](https://www.ffdn.org/).
 
 - **Плюсы** : у вас будет физический контроль над машиной, а VPN скрывает ваш трафик от вашего интернет-провайдера и позволяет вам обойти его ограничения;
 - **Минусы** : вам придется оплатить ежемесячную подписку на VPN.
 
-### На удалённом сервере (VPS или выделенный)
+## На удалённом сервере (VPS или выделенный)
 
 Вы можете арендовать виртуальный частный сервер (VPS) или выделенную машину у [ассоциации](https://db.ffdn.org/) или [коммерческие](/admin/get_started/providers/servers) облачные провайдеры.
 
 - **Плюсы** : ваш сервер и его подключение к Интернету будут быстрыми;
 - **Минусы** : вам придется платить ежемесячно за сервер и у вас не будет физического контроля над вашим сервером.
 
-### Суммарно
+## Суммарно
 
 export const styleNone = {
   textAlign: 'center',
