--- a/i18n/ru/docusaurus-plugin-content-docs/current/admin/05.get_started/40.post_install/15.port_forwarding.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/admin/05.get_started/40.post_install/15.port_forwarding.mdx
@@ -1,5 +1,6 @@
 ---
 title: Configure port-forwarding
+description: "Make your server accessible from outside your home"
 ---
 
 Если вы самостоятельно размещаетесь дома и у вас нет VPN, вам необходимо перенаправить порты на вашем домашнем маршрутизаторе. В приведенном ниже наброске предпринята попытка кратко описать роль и необходимость переадресации портов при настройке сервера дома.
@@ -16,11 +17,7 @@ title: Configure port-forwarding
 
 ### 2. Найдите локальный IP-адрес вашего сервера
 
-Определите, каков *локальный* IP вашего сервера, либо :
-
-- из вашего интерфейса box / router, в котором может быть список подключенных устройств
-- в веб-администраторе YunoHost, в разделе "Диагностика", "Подключение к Интернету", нажмите "Подробности" в отчете IPv4.
-- из командной строки на вашем сервере, запустив `hostname -I`
+Identify the *local* IP of your server using one of the method listed [on the corresponding page](/admin/get_started/post_install/find_ip).
 
 Локальный IP-адрес обычно выглядит как `192.168.xx.yy` или `10.0.xx.yy`
 
