--- a/docs/admin/05.get_started/10.providers/05.registrar/ovh/autodns.mdx
+++ b/docs/admin/05.get_started/10.providers/05.registrar/ovh/autodns.mdx
@@ -5,7 +5,7 @@ title: Obtaining an API key from OVH
 
 This page is meant to guide you in obtaining an API key from OVH in order to configure YunoHost's automatic DNS configuration mecanism
 
-:::info
+:::caution
 **DO NOT share your API tokens with anybody!** A malicious attacker obtaining your tokens could take over your domain, and possibly your server!
 :::
 
