--- a/docs/admin/45.tutorials/60.security.mdx
+++ b/docs/admin/45.tutorials/60.security.mdx
@@ -62,7 +62,8 @@ sudo yunohost settings set security.ssh.ssh_password_authentication -v no
 
 To prevent SSH connection attempts by robots that scan the internet for any server with SSH enabled, you can change the SSH port.
 This is handled by a system setting, which takes care of updating the SSH and Fail2Ban configuration.  
-There's no need to change this port if you've disabled password authentication.
+
+Note that changing the port is still useful even if you've disabled password authentication, because that significantly reduces noise from brute force attempts in SSH logs.
 
 :::warning
 If you modify anything in the `/etc/ssh/sshd_config` file, even if only the port, YunoHost will no longer manage this file. For this reason, always use the YunoHost admin tools to make changes to the systems configuration files!
