--- a/docs/admin/55.upgrade/12.0-bookworm/index.mdx
+++ b/docs/admin/55.upgrade/12.0-bookworm/index.mdx
@@ -36,47 +36,23 @@ sudo yunohost tools migrations run
 
 then read carefully and accept the disclaimer.
 
-#### Checking the update 
-
-Run one or more of the following commands to check the system actually updated. Sometimes some parts of the migration/upgrade don't happen.
-
-```
-lsb_release -a
-
-cat /etc/debian_version
-
-yunohost --version
-```
-
-#### Forcing part of the update to run
-Several people have received alerts that the upgrade process successfully completed, but their system still shows they are running Debian Bullseye (11). If this happens to you, you can run:
-```
-yunohost tools migrations run 0027_migrate_to_bookworm --force-rerun --accept-disclaimer
-```
-
-#### Agreeing to the new Terms of Service via command line
-
-YunoHost 12.x now requires that you agree to the new [Terms of Service](https://doc.yunohost.org/terms_of_services/). After reading and accepting them you can run:
-
-```
-yunohost tools migrations run 0031_terms_of_services --accept-disclaimer
-```
-
 ## During the migration
 
-Depending on your hardware and packages installed, the migration might take up to a few hours.
+Depending on your hardware and installed apps and packages, the migration can take up to one or two hours.
 
-The logs will be shown in the message bar (you can hover it to see the whole history). They will also be available after the migration (like any other operations) in Tools > Logs.
+Logs will be displayed in the webadmin's modal window in the middle of the page. They will also be browsable after the migration like any other major operation under Tools > Logs.
 
-### If the migration crashed / failed at some point
+## If the migration fails at some point
 
-If the migration failed at some point, it should be possible to relaunch it. If it still doesn't work, you can try to [get help](/community/help) (please provide the corresponding messages or whatever makes you say that it's not working).
+If the migration fails, the first thing to try should be relaunch it. If it still doesn't work, your should [ask for help to the community](/community/help) (please provide error message, full logs and any context element that would help debugging the issue).
 
-## What to do after the upgrade
+## After the migration
 
 ### Check that you actually are on Debian Bookworm and YunoHost 12.x
 
-For this, go to Diagnosis (category Base system) or look at the footer of the webadmin. In the command line, you can use `lsb_release -a` and `yunohost --version`.
+Go to Diagnosis (category Base system) or look at the bottom-right of the webadmin to check YunoHost's version.
+
+From the command line, you can use `lsb_release -a` and `yunohost --version`.
 
 ### Run the new pending migrations
 
@@ -86,6 +62,14 @@ Some more migrations appeared after the upgrade:
 - Migrate from PostgreSQL 13 to 15
 
 You should run those as soon as possible to ensure your apps work properly.
+
+#### Agreeing to the new Terms of Service via command line
+
+YunoHost 12.x now requires that you agree to the new [Terms of Service](https://doc.yunohost.org/terms_of_services/). After reading and accepting them you can run:
+
+```
+yunohost tools migrations run 0031_terms_of_services --accept-disclaimer
+```
 
 ### Check the Diagnosis
 
