--- a/i18n/es/docusaurus-plugin-content-docs/current/admin/01.about_self_hosting.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/admin/01.about_self_hosting.mdx
@@ -6,4 +6,6 @@ El **autoalojamiento** (o *self-hosting*) significa poseer y administrar tu prop
 
 El **autoalojamiento** implica disponer de un servidor. Un servidor es un ordenador destinado a ser accesible en la red las **24 horas del día** y que normalmente no tiene ni pantalla ni teclado, ya que se controla a distancia. **Contrariamente** a una creencia **extendida**, los servidores no son necesariamente máquinas enormes y muy potentes: en la actualidad, una pequeña placa **ARM** de unos **\~30 €/$** es suficiente para el **autoalojamiento**.
 
+![Internet topologies diagram](/img/internet_topologies.png)
+
 La práctica del **autoalojamiento** no convierte "tu internet" en algo más seguro y tampoco proporciona anonimato por **sí mismo**. El objetivo es generalmente generar autonomía y **control** de tus servicios y tus datos — lo que también implica una **responsabilidad**.
