--- a/i18n/es/docusaurus-plugin-content-docs/current/admin/05.get_started/40.post_install/20.dns_config.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/admin/05.get_started/40.post_install/20.dns_config.mdx
@@ -78,6 +78,26 @@ Pero puede ser un poco más fácil entenderla viéndola de esta manera :
 - ¡ No pongas registros IPv6 si no estás seguro que el IPv6 funcione en tu servidor ! Tendrás problemas con Let's Encrypt si no es el caso :-)
 - If you're using the domain provider Namecheap the SRV DNS entries are formatted as **Service**: `_xmpp-client` **Protocol**: `_tcp` **Priority**: `0` **Weight**: `5` **Port**: `5222` **Target**: `your.domain.tld`
 
+### Reverse DNS
+
+If your ISP or VPS provider let you define a [Reverse DNS
+lookup](https://en.wikipedia.org/wiki/Reverse_DNS_lookup) for your public IPv4
+and/or IPv6 addresses, you must configure it. It will prevent you to be marked as
+spam by anti-spam filters.
+
+**N.B.: the reverse DNS configuration happens on your Internet Service Provider or VPS provider. It is *not* handled by your domain's registrar.**
+
+If your public IPv4 address is `111.222.333.444` and your DNS
+domain is `domain.tld`, you should get following answer when using `nslookup`
+command tool:
+
+```bash
+nslookup 111.222.333.444
+444.333.222.111.in-addr.arpa    name = domain.tld.
+```
+
+The diagnosis system available in the webadmin performs this checks automatically (in section Email).
+
 ### IP Dinámica
 
 Si la dirección IP pública cambia, sigue este [tutorial](/admin/tutorials/domains/dns_dynamicip).
