--- a/i18n/es/docusaurus-plugin-content-docs/current/admin/25.domains/certificate.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/admin/25.domains/certificate.mdx
@@ -15,9 +15,7 @@ En efecto, los usuarios deberán pasar por una pantalla de este tipo :
 
 Esta pantalla equivale a que te pidan ** ¿ Confías en el servidor que aloja este sitio ? ***. Esto puede asustar tu usuarios (con toda la razón).
 
-Para evitar esta confusión, es posible obtener un certificado, reconocido directamente por los navegadores, firmado por una autoridad « conocida » : **Let's Encrypt**, **Gandi**, **RapidSSL**, **StartSSL**, **Cacert**.
-
-**Let's Encrypt** propone certificados gratuitos. Desde la versión 2.5, YunoHost permite instalar directamente tales certificados desde la interfaz de administración o la línea de comandos. El resto del documento detalla la instalación y la firma de este tipo de certificado. También puedes [instalar un certificado de otra autoridad que Let's Encrypt](/admin/tutorials/certificate_custom).
+To avoid this confusion, it's possible to get a certificate signed a known authority named **Let's Encrypt** which provide free certificates directly recognized by browsers. YunoHost allows to directly install this certificate from the web administration interface or from the command line.
 
 ### Instalar un certificado Let's Encrypt
 
@@ -72,7 +70,7 @@ Una vez que la instalación está terminada, puedes dirigirte a tu dominio vía 
 </TabItem>
 </Tabs>
 
-##### Si hay un problema
+#### Si hay un problema
 
 Si, después de una manipulación incorrecta, un certificado se encuentra en una mala situación (e.g. pérdida del certificado o imposibilidad de leerlo), es posible regenerar un certificado autofirmado :
 
