--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/05.methods.mdx
@@ -4,28 +4,28 @@ title: Choisir son mode d'auto-hébergement
 
 Vous pouvez vous auto-héberger à la maison (sur un petit ordinateur), ou sur un serveur distant. Chaque solution a ses avantages et inconvénients :
 
-### À la maison, par exemple sur une carte ARM ou un ancien ordinateur
+## À la maison, par exemple sur une carte ARM ou un ancien ordinateur
 
 Vous pouvez vous héberger chez vous, sur une carte ARM ou un vieil ordinateur, connecté à votre box internet.
 
 - **Avantages** : vous aurez un contrôle physique sur la machine et avez seulement besoin d'acheter le matériel initial ;
 - **Inconvénients** : il vous faudra [configurer manuellement votre box internet](/admin/get_started/post_install/port_forwarding) et serez possiblement [limité par certains aspects de votre fournisseur d'accès à Internet](/admin/get_started/providers/isp/).
 
-### À la maison, derrière un VPN
+## À la maison, derrière un VPN
 
 Un VPN est un tunnel chiffré entre deux machines. En pratique, cela permet de faire « comme si » une machine était connectée depuis ailleurs. Ceci permet de s'auto-héberger à la maison tout en contournant les limitations du fournisseur d'accès à Internet. Voir aussi [le projet Brique Internet](https://labriqueinter.net/) et [la FFDN](https://www.ffdn.org/).
 
 - **Avantages** : vous aurez un contrôle physique sur la machine, et le VPN permettra de cacher votre trafic vis-à-vis de votre FAI ainsi que de contourner ses limitations ;
 - **Inconvénients** : il vous faudra payer des frais mensuels pour le VPN.
 
-### Sur un serveur distant (VPS ou serveur dédié)
+## Sur un serveur distant (VPS ou serveur dédié)
 
 Vous pouvez louer un serveur privé virtuel ou une machine dédiée à des hébergeurs [associatifs](https://db.ffdn.org/) ou [commerciaux](/admin/get_started/providers/servers).
 
 - **Avantages** : votre serveur sera rapide et la connectivité internet sera bonne ;
 - **Inconvénients** : il vous faudra payer des frais mensuels pour la machine, et vous n'aurez pas de contrôle physique dessus.
 
-### Résumé
+## Résumé
 
 export const styleNone = {
   textAlign: 'center',
