--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/10.providers/20.servers.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/10.providers/20.servers.mdx
@@ -8,17 +8,13 @@ import {HighlightFFDN, HighlightNonProfit, HighlightCHATONS} from '@site/src/com
 ## Offres avec YunoHost préinstallé
 
 * [Alsace Réseau Neutre](https://arn-fai.net) (VPS) <HighlightFFDN/> <HighlightCHATONS/>
-
 * [ECOWAN](https://ecowan.fr) (VPS)
-
+* [Hosterfy](https://www.hosterfy.com/en/kvm-vps-hosting) (VPS)
 * [Scaleway Dedibox](https://www.scaleway.com/en/dedibox/operating-systems/) (server dédié)
-
 * [Numericoop](https://numericoop.fr/solution-sur-mesure/) (VPS) <HighlightCHATONS/>
 
 ## Externalisation informatique YunoHost 
 
 * [ReflexLibre](https://reflexlibre.net) (seulement en France) <HighlightCHATONS/>
-
 * [Numericoop](https://numericoop.fr/solution-sur-mesure/) (seulement en France) <HighlightCHATONS/>
-
 * [Librezo](https://librezo.fr) (seulement en France)
