--- a/i18n/it/docusaurus-plugin-content-docs/current/admin/05.get_started/40.post_install/15.port_forwarding.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/admin/05.get_started/40.post_install/15.port_forwarding.mdx
@@ -1,5 +1,6 @@
 ---
 title: Configure port-forwarding
+description: "Make your server accessible from outside your home"
 ---
 
 Se il vostro server è ospitato in casa e non avete configurato una VPN, dovrete configurare le porte del vostro router ("machin-box"). Lo schema qui sotto, cerca di spiegare, brevemente, il ruolo del reindirizzamento delle porte nella configurazione di un server casalingo.
@@ -17,11 +18,7 @@ L'interfaccia di amministrazione del vostro router è, quasi sempre, raggiungibi
 
 ### 2. Trovare l'IP del server sulla vostra rete locale
 
-Cercate l'IP *locale* del vostro server così:
-
-- dalla pagina di amministrazione del vostro router, che potrebbe elencarvi i dispositivi connessi
-- dalla pagina webadmin di YunoHost, sezione 'Diagnostica' 'Connettività internet', scegliete 'Dettagli' nella riga IPv4.
-- dalla linea di comando del vostro server con il comando `hostname -I`
+Cercate l'IP *locale* del vostro server così, using one of the method listed [on the corresponding page](/admin/get_started/post_install/find_ip).
 
 Un indirizzo IP locale assomiglia, normalmente, a `192.168.xx.yy` oppure `10.0.xx.yy`.
 
@@ -54,5 +51,3 @@ Alcuni router dispongono permettono di attivare l'UPnP. L'UPnP si occupa di rein
 ```bash
 sudo yunohost firewall reload
 ```
-
-le porte del router dovrebbero essere automaticamente reindirizzate verso il server.
